...
@Preview
@Composable
private fun SearchRecipeScreenPreview() {
    SearchRecipeScreen(
        state = SearchRecipeState(
            searchQuery = "query",
            searchText = "Search Result",
            filteredRecipesText = "10 results",
            filteredRecipes = listOf(
                Recipe(
                    title = "Traditional spare ribs baked",
                    chef = "Chef John",
                    time = "20 min",
                    category = "Chinese",
                    rating = 4.0,
                    imageUrls = "https://cdn.pixabay.",
                    createdAt = System.currentTimeMillis(),
...
