...
                    )
                },
                navigationIcon = {
                    IconButton(onClick = { onNavigate(SearchRecipeNavigation.Back) }) {
                        Icon(
                            imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                            contentDescription = "back icon",
                        )
                    }
                },
                colors = TopAppBarDefaults.centerAlignedTopAppBarColors(
                    containerColor = AppColors.White,
                ),
...
